// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`object should parse object 1`] = `
{
  "additionalProperties": false,
  "description": undefined,
  "properties": {
    "age": {
      "description": undefined,
      "title": undefined,
      "type": "number",
    },
    "name": {
      "description": undefined,
      "title": undefined,
      "type": "string",
    },
  },
  "required": [
    "name",
    "age",
  ],
  "title": undefined,
  "type": "object",
}
`;

exports[`object should parse object with maximum and minimum keys 1`] = `
{
  "additionalProperties": false,
  "description": undefined,
  "properties": {
    "age": {
      "description": undefined,
      "title": undefined,
      "type": "number",
    },
    "name": {
      "description": undefined,
      "title": undefined,
      "type": "string",
    },
  },
  "required": [
    "name",
    "age",
  ],
  "title": undefined,
  "type": "object",
}
`;

exports[`object should parse nested object models 1`] = `
{
  "additionalProperties": false,
  "description": undefined,
  "properties": {
    "age": {
      "description": undefined,
      "title": undefined,
      "type": "number",
    },
    "user": {
      "additionalProperties": false,
      "description": undefined,
      "properties": {
        "age": {
          "description": undefined,
          "title": undefined,
          "type": "number",
        },
        "name": {
          "description": undefined,
          "title": undefined,
          "type": "string",
        },
        "user": {
          "additionalProperties": false,
          "description": undefined,
          "properties": {
            "age": {
              "description": undefined,
              "title": undefined,
              "type": "number",
            },
            "name": {
              "description": undefined,
              "title": undefined,
              "type": "string",
            },
          },
          "required": [
            "name",
            "age",
          ],
          "title": undefined,
          "type": "object",
        },
      },
      "required": [
        "name",
        "age",
        "user",
      ],
      "title": undefined,
      "type": "object",
    },
    "value": {
      "description": undefined,
      "title": undefined,
      "type": "string",
    },
  },
  "required": [
    "value",
    "age",
    "user",
  ],
  "title": undefined,
  "type": "object",
}
`;

exports[`object should ignore undefined properties 1`] = `
{
  "additionalProperties": false,
  "description": undefined,
  "properties": {
    "age": {
      "description": undefined,
      "title": undefined,
      "type": "number",
    },
    "name": {
      "description": undefined,
      "title": undefined,
      "type": "string",
    },
  },
  "required": [
    "age",
  ],
  "title": undefined,
  "type": "object",
}
`;
